data/rq1/k5/intermediate/appverify_lite__e5ebe91a98b9/workspace/final_projects/appverify_lite__e5ebe91a98b9/translate_by_qwen3_coder/.c2r_bindgen_extern/app_provision_c5402285.externs.rs

/* automatically generated by rust-bindgen 0.72.1 */

pub type size_t = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn strcmp(
        arg1: *const ::core::ffi::c_char,
        arg2: *const ::core::ffi::c_char,
    ) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn strchr(
        arg1: *const ::core::ffi::c_char,
        arg2: ::core::ffi::c_int,
    ) -> *mut ::core::ffi::c_char;
}
unsafe extern "C" {
    pub fn strlen(arg1: *const ::core::ffi::c_char) -> size_t;
}
pub const LOG_TYPE_MIN: LogType = 0;
pub const LOG_INIT: LogType = 1;
pub const LOG_CORE: LogType = 3;
pub const LOG_TYPE_MAX: LogType = 4;
pub type LogType = ::core::ffi::c_uint;
pub const LOG_DEBUG: LogLevel = 3;
pub const LOG_INFO: LogLevel = 4;
pub const LOG_WARN: LogLevel = 5;
pub const LOG_ERROR: LogLevel = 6;
pub const LOG_FATAL: LogLevel = 7;
pub type LogLevel = ::core::ffi::c_uint;
unsafe extern "C" {
    pub fn HiLogPrint(
        type_: LogType,
        level: LogLevel,
        domain: ::core::ffi::c_uint,
        tag: *const ::core::ffi::c_char,
        fmt: *const ::core::ffi::c_char,
        ...
    ) -> ::core::ffi::c_int;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct cJSON {
    pub next: *mut cJSON,
    pub prev: *mut cJSON,
    pub child: *mut cJSON,
    pub type_: ::core::ffi::c_int,
    pub valuestring: *mut ::core::ffi::c_char,
    pub valueint: ::core::ffi::c_int,
    pub valuedouble: f64,
    pub string: *mut ::core::ffi::c_char,
}
unsafe extern "C" {
    pub fn cJSON_Parse(value: *const ::core::ffi::c_char) -> *mut cJSON;
}
unsafe extern "C" {
    pub fn cJSON_Delete(item: *mut cJSON);
}
unsafe extern "C" {
    pub fn cJSON_GetArraySize(array: *const cJSON) -> ::core::ffi::c_int;
}
unsafe extern "C" {
    pub fn cJSON_GetArrayItem(array: *const cJSON, index: ::core::ffi::c_int) -> *mut cJSON;
}
unsafe extern "C" {
    pub fn cJSON_GetObjectItem(
        object: *const cJSON,
        string: *const ::core::ffi::c_char,
    ) -> *mut cJSON;
}
unsafe extern "C" {
    pub fn malloc(arg1: size_t) -> *mut ::core::ffi::c_void;
}
unsafe extern "C" {
    pub fn free(arg1: *mut ::core::ffi::c_void);
}
pub type errno_t = ::core::ffi::c_int;
unsafe extern "C" {
    pub fn memset_s(
        dest: *mut ::core::ffi::c_void,
        destMax: size_t,
        c: ::core::ffi::c_int,
        count: size_t,
    ) -> errno_t;
}
unsafe extern "C" {
    pub fn strcpy_s(
        strDest: *mut ::core::ffi::c_char,
        destMax: size_t,
        strSrc: *const ::core::ffi::c_char,
    ) -> errno_t;
}
